# pptx-template-skill

./: .gitignore  README.md  README.zh-CN.md
docs/plans/: 2026-05-22-aigc-background-design.md  2026-05-22-aigc-background-implementation.md
skills/pptx-translate-skill/: SKILL.md  pyproject.toml
skills/pptx-translate-skill/agents/: openai.yaml
skills/pptx-translate-skill/references/: content-json.md  manifest-json.md  ooxml-boundaries.md  patch-plan-json.md  workflow.md
skills/pptx-translate-skill/scripts/: analyze_template.py  pptx_json_cli.py  validate_content.py
skills/pptx-translate-skill/scripts/pptx_json/: __init__.py  errors.py
skills/pptx-translate-skill/scripts/pptx_json/analyze/: __init__.py  table_slots.py  text_slots.py
skills/pptx-translate-skill/scripts/pptx_json/compile/: chart_patch.py  text_patch.py
skills/pptx-translate-skill/scripts/pptx_json/export/: chart_apply.py  slide_copy.py  text_apply.py
skills/pptx-translate-skill/scripts/pptx_json/models/: patch.py  reports.py
skills/pptx-translate-skill/scripts/pptx_json/package/: rels.py
skills/pptx-translate-skill/scripts/pptx_json/validate/: capacity.py  resources.py
skills/pptx-translate-skill/scripts/pptx_json/verify/: __init__.py
skills/pptx-translate-skill/tests/: __init__.py  helpers.py
skills/pptx-translate-skill/tests/integration/: test_e2e_simple_template.py
skills/pptx-translate-skill/tests/unit/: test_content_validator.py  test_patch_compiler.py  test_rels.py  test_table_slots.py  test_text_apply.py  test_text_patch.py  test_text_slots.py
(+82 files in other folders)
